# veo-stubs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  cmake.yml
include/: stub.hpp
src/: libveo.cpp  stub_veorun.cpp
test/: crc32.h  hello.c  libvehello.c  libvetest.c  test.cpp
